tests/ui/anon-params/anon-params-edition-hygiene.stderr
error: expected one of `:`, `@`, or `|`, found `)`
  --> $DIR/anon-params-edition-hygiene.rs:12:1
   |
LL | generate_trait_2015_tt!(u8);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected one of `:`, `@`, or `|`
   |
   = note: anonymous parameters are removed in the 2018 edition (see RFC 1685)
   = note: this error originates in the macro `generate_trait_2015_tt` (in Nightly builds, run with -Z macro-backtrace for more info)
help: if this is a `self` type, give it a parameter name
   |
LL | generate_trait_2015_tt!(self: u8);
   |                         +++++
help: if this is a parameter name, give it a type
   |
LL | generate_trait_2015_tt!(u8: TypeName);
   |                           ++++++++++
help: if this is a type, explicitly ignore the parameter name
   |
LL | generate_trait_2015_tt!(_: u8);
   |                         ++

error: aborting due to 1 previous error

